added-meta-tag-seo

--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Hackintown offers comprehensive services including website development, app development, SEO, and influencer marketing.">
+        <meta name="keywords" content="software, IT company, website development, app development, SEO, influencer marketing">
+        <meta name="author" content="Hackintown">
+        <meta property="og:title" content="Hackintown - Software & IT Company">
+        <meta property="og:description" content="Hackintown offers comprehensive services including website development, app development, SEO, and influencer marketing.">
+        <meta property="og:image" content="URL-to-your-image">
+        <meta property="og:url" content="URL-to-your-page">
+        <meta name="robots" content="index, follow">
         <link rel="icon" type="image/svg+xml" href="/vite.svg">
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -9,7 +18,6 @@
             integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
             crossorigin="anonymous"
         >
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home - Influencer Marketing Platform Hackintown &#8211; Influencer Marketing Platform</title>
     </head>
     <body>
